feat: add dict and list block, ident calls, completions

--- a/languages/fink.language-configuration.json
+++ b/languages/fink.language-configuration.json
@@ -30,6 +30,7 @@
     {"open": "'", "close": "'", "notIn": ["string"]},
     {"open": "\"", "close": "\"", "notIn": ["string"]},
     {"open": "`", "close": "`", "notIn": ["string"]},
+    {"open": "rx/", "close": "/", "notIn": ["string"]},
     {"open": "---", "close": "---", "notIn": ["string", "comment"]}
   ],
 
