--- a/languages/jsx.language-configuration.json
+++ b/languages/jsx.language-configuration.json
@@ -1,16 +1,20 @@
 {
   "comments": {
-    "blockComment": ["{/*", "*/}"]
+    "lineComment": "#",
+    "blockComment": ["{---", "---}"]
   },
+
   "brackets": [["{", "}"], ["[", "]"], ["(", ")"], ["<", ">"]],
+
   "autoClosingPairs": [
     { "open": "{", "close": "}" },
     { "open": "[", "close": "]" },
     { "open": "(", "close": ")" },
-    { "open": "'", "close": "'", "notIn": ["string", "comment"] },
+    { "open": "'", "close": "'", "notIn": ["string"] },
     { "open": "\"", "close": "\"", "notIn": ["string"] },
-    { "open": "/**", "close": " */", "notIn": ["string"] }
+    {"open": "<>", "close": "</>", "notIn": ["string"]}
   ],
+
   "surroundingPairs": [
     ["{", "}"],
     ["[", "]"],
@@ -19,6 +23,7 @@
     ["'", "'"],
     ["\"", "\""]
   ],
+
   "indentationRules": {
     "increaseIndentPattern": "^[^-]+([:=+<\\-/\\*]{1}\\s*)$",
     // TODO: this is not working to unindent empty lines
